fixed subtle bugs in delta updates, e.g. editing the folder of a todo item can cause the item to be removed from the currently shown folder list
removed onmouseout event which caused folder details to blink when hovering

added more info to the mouseover of a folder, shows todo items name and done status

added users for easier demo-ing, each session is given a new user

force scrollbar in css

svn path=/; revision=3137

--- a/test_apps/mynote/stylesheets/mytodo.css
+++ b/test_apps/mynote/stylesheets/mytodo.css
@@ -1,3 +1,9 @@
+/* force scrollbar */           
+html {
+  height: 100% ;
+  overflow-y:scroll;
+}
+
 body {
   font-size  : 12pt;
   font-family: "Verdana";
